# scraper

./: .gitignore  .replit  README.md  deploy.py  pyproject.toml  start.py  test.sh  todo.md
backend/: api.py  requirements.txt  scraper.py  uploader.py
frontend/src/: App.tsx
frontend/src/components/: ConfigPanel.tsx  ContentPanel.tsx  DownloadManager.tsx  UsagePanel.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
